<resources>
    <string name="app_name">W23D3</string>
    <string name="add_button">Add</string>
    <string name="delete_button">Delete</string>
    <string name="edit_text_view">Edit</string>
    <string name="surname_text_view">Surname:</string>
    <string name="update_button">Update</string>
    <string name="edit_button">Edit</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_lastname">Sort by Last Name</string>
</resources>
